Added the basic css and html to start up the project. Most importantly, I added 2 css files that will help us out. Normalise.css which will keep the page the same regardless of which browser its opened in, and  Grid.css which will allow us to use column based web pages with the use of span-of-1

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <title> BrainSpark </title>
     </head>
         
     <body>
-        
+        <h1>I am inside my website!</h1>
     </body>
 
 </html>
