--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
         <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-        <title> BrainSpark </title>
+        <title> Swan Academics </title>
     </head>
         
     <body>
-        <h1>I am inside my website!</h1>
-        <h1>I am inside my website!</h1>
+        <!--Header will have everything in our landing page (Image background one)-->
+        <header>
+            <nav>
+                <div class="row">
+                    <img src="resources/css/img/logo.png" alt="Swan Academics Logo" class="logo">
+                    <ul class="navigation">
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Feedback</a></li>
+                        <li><a href="#">Sign-Up</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="hero-text-box">
+                <h1>Try learning the fun way</h1>
+                <a class= "button filled-button" href="#">Learn More</a>
+                <a class= "button filled-button" href="#">Play</a>
+            </div>
+        </header>
     </body>
-
+    
 </html>
